--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ a {
   color: #000;
   font-size: 1.125em;
 }
-body {
+main {
   background: rgba(120, 82, 223, 0.3);
 }
 header,
@@ -15,7 +15,8 @@ footer {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  padding-bottom: 2vh;
+  margin-bottom: 1vh;
+  margin-top: 1vh;
   background: #7852df;
 }
 .logo > img {
@@ -80,7 +81,7 @@ ul {
 }
 .comparatif {
   max-width: 1024px;
-  margin: 5em auto;
+  margin: 1em auto 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -91,15 +92,43 @@ ul {
   flex-flow: column wrap;
   justify-content: space-between;
 }
-.bloc_liens {
+.bloc_liens_av {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
 }
-.bloc_liens ul li {
-  margin: 0.75em auto;
+.bloc_liens_ap {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
 }
-.bloc_liens > img {
+
+.bloc_liens_av ul li,
+.bloc_liens_ap ul li,
+.compare_gtmetrix ul li {
+  margin: 0.75em auto;
+  display: flex;
+}
+.bloc_liens_ap ul li {
+  display: flex;
+  justify-content: flex-end;
+}
+.bloc_liens_av > img {
+  height: 50px;
+  align-self: center;
+  margin-right: 2em;
+}
+.bloc_liens_ap > img {
+  height: 50px;
+  align-self: center;
+  margin-left: 2em;
+}
+.compare_gtmetrix {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+}
+.compare_gtmetrix > img {
   height: 50px;
   align-self: center;
   margin-right: 2em;
